[gd_scene load_steps=7 format=3 uid="uid://8ptdmrrdwojh"]

[ext_resource type="FontFile" uid="uid://cm40i6mvl1t3e" path="res://fonts/snake_business.ttf" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://cs26lvs7bf0x2" path="res://scenes/main_menu_scene/main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://cxaq1lpo2t7ho" path="res://fonts/black_charcoal.TTF" id="2_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.684098, 0.582663, 0.445276, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.714734, 0.581304, 0.271327, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0745098, 0.423529, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 150
corner_radius_bottom_right = 5
corner_radius_bottom_left = 150

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.714734, 0.581304, 0.271327, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0745098, 0.423529, 0.105882, 1)
corner_radius_top_left = 150
corner_radius_top_right = 5
corner_radius_bottom_right = 150
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -171.0
offset_right = 299.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7vrkn")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "(New Game)"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7vrkn")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "(Level select)"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7vrkn")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "(Options)"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7vrkn")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "(Credits)"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7vrkn")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "(Exit)"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.5
offset_top = 19.0
offset_right = 123.5
offset_bottom = 145.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0745098, 0.423529, 0.105882, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 100
text = "Viper"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_exit_pressed"]
